# FoggyVision

./: .gitignore  README.md  pyproject.toml
media/images/: 2026-06-13_21-40-15_Frame-0_distNormSmlMask.tif  2026-06-13_21-40-15_Frame-1_distMask.tif  2026-06-13_21-45-51_Frame-8_distMask.tif  2026-06-13_21-45-51_Frame-9_distMask.tif  2026-06-13_21-45-51_Frame-9_distNormSmlMask.tif  2026-06-13_22-01-00_Frame-0_distMask.tif  2026-06-13_22-01-00_Frame-0_distNormSmlMask.tif  2026-06-13_22-01-00_Frame-1_distNormSmlMask.tif
media/test/2026-06-13_17-08-31/: Frame-0.json  Frame-0_distMask.tif  Frame-0_distNormSmlMask.tif  Frame-1.json  Frame-1_distMask.tif  Frame-1_distNormSmlMask.tif  Frame-2.json  Frame-2_distMask.tif  Frame-2_distNormSmlMask.tif  Frame-3.json  Frame-3_distMask.tif  Frame-3_distNormSmlMask.tif
media/test/2026-06-13_20-32-10/: Frame-0.json  Frame-0_distMask.tif  Frame-1.json  (+1 more)
notebooks/db/: document_import.ipynb
notebooks/experiment_setup/: Comparing_Visibility_Focus_Class.ipynb  Linear_v_Exponential.ipynb  Synthetic_Quality_Class_Breakdown.ipynb  Synthetic_Quality_Comparison SplitDB copy.ipynb  Synthetic_Quality_Focus_Visualization.ipynb
notebooks/transfer_learning_based_approach_resnet50/: Image_Subregions.ipynb  average_grey_image_subregions.ipynb  coaliated_subregions.ipynb  modifications.ipynb
scripts/: remove_fog_types.py
src/fogvis/: cli.py  data_importer.py  dataset.py
tests/: _calibrate_tmp.py  conftest.py  test_data_importer.py  test_database_cleanup.py  test_database_writer.py  test_file_utils.py  test_image_importer.py  test_rebuild.py
(+41 files in other folders)
