[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "FoggyVision"
version = "0.1.4"
description = "Suite of machine learning approaches to estimate atmospheric visibility"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Jacob Schaupp", email = "jacob.schaupp@gmail.com"}
]
dependencies = [
  "torch",
  "Pillow",
  "matplotlib",
  "scipy",
  "opencv-python",
  "tqdm",
  "numpy",
]

[project.scripts]
fogvis-cli = "fogvis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fogvis"]